added more things

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,200;0,700;1,200&family=Raleway:ital,wght@0,100;0,200;0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="shortcut icon" href="/resources/h-logo3.png" type="image/x-icon">
     <script src="index.js" defer></script>
@@ -13,10 +16,10 @@
     <main>
         <div class="main-container">
             <h1 id="title">Portfolio</h1>
-            <div class="row-container">
+            <div class="col-container">
                 <section aria-labelledby="Introduction" id="intro">
                     <h2 id="Introduction" class="section-titles">Introduction</h2>
-                    <div class="row-section">
+                    <div class="row-section" id="profile">
                     <img src="resources/2915aefba872f225d2561eceb92e6c4c.jpg" alt="Profile Picture" id="profile-picture">
                         <div class="col-section" id="name-career">
                     <h3 id="name">Harry Ruiz Figueroa</h3>
@@ -24,10 +27,6 @@
                         </div>
                     </div>
                     <p>Hi! Im a Full-Stack Developer who likes to code cool things :D</p>
-                </section>
-                <section aria-labelledby="Info" id="info">
-                    <h2 id="Info" class="section-titles">Info</h2>
-                    <p>Hi! Im a Full-Stack Developer, I like to code cool stuff and have fun in the process! My goal is to be a AI programmer one day but Im good at bringing creative ideas to a website.</p>
                 </section>
                 <section aria-labelledby="Languages" id="languages">
                     <h2 id="Languages" class="section-titles">Languages</h2>
@@ -40,9 +39,25 @@
                         <img src="/resources/ISO_C++_Logo.svg.png" alt="c++" id="c++-logo" class="p-languages">
                     </div>
                 </section>
+                <section aria-labelledby="Info" id="info">
+                    <h2 id="Info" class="section-titles">Info</h2>
+                    <p>Hi! Im a Full-Stack Developer, I like to code cool stuff and have fun in the process! My goal is to be a AI programmer one day but Im good at bringing creative ideas to a website.</p>
+                </section>
                 <section aria-labelledby="Projects" id="projects">
                     <h2 id="Projects" class="section-titles">Projects</h2>
-                    <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. PROJ PROJ PROJ RPOJ RPROJRORJOR RJO RJORRJOR JOR JRORJORJORJORJRORJORJORJRORJOR JROJRORJOJRORJORJORJORJROJRORJORJORJOROJRORJORJORJORJORJORJORJORJROJROJRORJORJORJO</p>
+                    <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. </p>
+                    <div class="row-section">
+                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a"><img src="/resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a"><img src="/resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a"><img src="/resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a"><img src="/resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
+                    </div>
+                </section>
+            </div>
+            <div class="row-container">
+                <section aria-labelledby="Twitter" id="twitter">
+                    <h2 id="Twitter" class="section-titles">Twitter</h2>
+                    <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="/resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
                 </section>
             </div>
         </div>
