added a little bit of interactivity

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <section aria-labelledby="Info" id="info">
                     <h2 id="Info" class="section-titles">Info</h2>
                     <p>Hi! Im a Full-Stack Developer, I like to code cool stuff and have fun in the process! My goal is to be a AI programmer one day but Im good at bringing creative ideas to a website.</p>
+                    <p id="more-p">I like to code in several languages and I like math and also physics. I really like a bunch of things but I think my favorite thing to do is program because of the fact that I can bring any of my creative ideas to an app.</p>
+                    <a href="#" id="more-info">See More...</a>
                 </section>
                 <section aria-labelledby="Projects" id="projects">
                     <h2 id="Projects" class="section-titles">Projects</h2>
