added some cool things

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <h2 id="Projects" class="section-titles">Projects</h2>
                     <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. </p>
                     <div class="row-section">
-                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a"><img src="/resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a"><img src="/resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a"><img src="/resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a"><img src="/resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="/resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="/resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a" id="proj-a-cc"><img src="/resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a" id="proj-a-lodash"><img src="/resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
                     </div>
                 </section>
             </div>
