added github and made some cool styling changes

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     <h2 id="Twitter" class="section-titles">Twitter</h2>
                     <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="/resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
                 </section>
+                <section aria-labelledby="Github" id="github">
+                    <h2 id="Github" class="section-titles">Github</h2>
+                    <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="/resources/github.png" alt="Github Logo" id="github-logo"></a>
+                </section>
             </div>
         </div>
     </main>    
