added notesapp and sendemail button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 <body>
     <main>
+        <button type="button" id="close-button-notes">X</button>
+        <object type="text/html" data="https://harryto4k.github.io/Notes-/" width="85%" height="85%" id="notes-app">
+        </object>
         <div class="main-container">
             <h1 id="title">Portfolio</h1>
             <div class="col-container">
@@ -25,6 +28,7 @@
                     <h3 id="name">Harry Ruiz Figueroa</h3>
                     <a id="career">Full-Stack Developer</a>
                         </div>
+                    <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="/resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
                     <p>Hi! Im a Full-Stack Developer who likes to code cool things :D</p>
                 </section>
@@ -64,6 +68,9 @@
                 <section aria-labelledby="Github" id="github">
                     <h2 id="Github" class="section-titles">Github</h2>
                     <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="/resources/github.png" alt="Github Logo" id="github-logo"></a>
+                </section>
+                <section aria-label="Notes App" id="notes-app-container">
+                    <img src="/resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img">
                 </section>
             </div>
         </div>
