edited minor things

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img src="resources/2915aefba872f225d2561eceb92e6c4c.jpg" alt="Profile Picture" id="profile-picture">
                         <div class="col-section" id="name-career">
                     <h3 id="name">Harry Ruiz Figueroa</h3>
-                    <a id="career">Full-Stack Developer</a>
+                    <a id="career">Student (FullStack)</a>
                         </div>
                     <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="/resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
@@ -77,3 +77,9 @@
     </main>    
 </body>
 </html>
+
+
+<!--
+    Ideas for Future Things:
+    - Make a feature so that projects sections can expand horizontally and show info about the project. 
+-->
