fixed githubpages bug

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h3 id="name">Harry Ruiz Figueroa</h3>
                     <a id="career">Student (FullStack)</a>
                         </div>
-                    <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="/resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
+                    <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
                     <p>Hi! Im a Full-Stack Developer who likes to code cool things :D</p>
                 </section>
@@ -37,10 +37,10 @@
                     <p id="lang-p">Here are some of the languages I have experience with:</p>
                     <div class="row-section" id="lang-images">
                         <img src="resources/html5-logo-31813.png" alt="html" id="html-logo" class="p-languages">
-                        <img src="/resources/html5-logo-31821.png" alt="css" id="css-logo" class="p-languages">
-                        <img src="/resources/javascript-39404.png" alt="javasript" id="js-logo" class="p-languages">
+                        <img src="resources/html5-logo-31821.png" alt="css" id="css-logo" class="p-languages">
+                        <img src="resources/javascript-39404.png" alt="javasript" id="js-logo" class="p-languages">
                         <img src="resources/Bash_Logo_Colored.svg.png" alt="bash" id="bash-logo" class="p-languages">
-                        <img src="/resources/ISO_C++_Logo.svg.png" alt="c++" id="c++-logo" class="p-languages">
+                        <img src="resources/ISO_C++_Logo.svg.png" alt="c++" id="c++-logo" class="p-languages">
                     </div>
                 </section>
                 <section aria-labelledby="Info" id="info">
@@ -53,24 +53,24 @@
                     <h2 id="Projects" class="section-titles">Projects</h2>
                     <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. </p>
                     <div class="row-section">
-                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="/resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="/resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a" id="proj-a-cc"><img src="/resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a" id="proj-a-lodash"><img src="/resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a" id="proj-a-cc"><img src="resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
+                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a" id="proj-a-lodash"><img src="resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
                     </div>
                 </section>
             </div>
             <div class="row-container">
                 <section aria-labelledby="Twitter" id="twitter">
                     <h2 id="Twitter" class="section-titles">Twitter</h2>
-                    <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="/resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
+                    <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
                 </section>
                 <section aria-labelledby="Github" id="github">
                     <h2 id="Github" class="section-titles">Github</h2>
-                    <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="/resources/github.png" alt="Github Logo" id="github-logo"></a>
+                    <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="resources/github.png" alt="Github Logo" id="github-logo"></a>
                 </section>
                 <section aria-label="Notes App" id="notes-app-container">
-                    <img src="/resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img">
+                    <img src="resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img">
                 </section>
             </div>
         </div>
