fixed githubpages bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,200;0,700;1,200&family=Raleway:ital,wght@0,100;0,200;0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="shortcut icon" href="/resources/h-logo3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="resources/h-logo3.png" type="image/x-icon">
     <script src="index.js" defer></script>
     <title>Harry Ruiz - Portfolio</title>
 </head>
