added project expand

--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
                     <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="resources/github.png" alt="Github Logo" id="github-logo"></a>
                 </section>
                 <section aria-label="Notes App" id="notes-app-container">
+                    <div class="row-section" id="notes-section-container">
                     <img src="resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img">
+                    <div class="col-section" id="notes-col-container">
+                    <h2 id="Notes" class="section-titles">Notes</h2>
+                    <p id="notes-p">The Notes App is a website used to make notes about important stuff or things you have pending.</p>
+                    <div class="row-section" id="notes-logos-container">
+                    <img src="resources/html-black.png" class="notes-logos" id="html-black-logo" alt="HTML"> 
+                    <img src="resources/css-black.png" class="notes-logos" id="css-black-logo" alt="CSS">
+                    <img src="resources/javascript-39404.png" class="notes-logos" id="js-black-logo" alt="JAVASCRIPT">
+                    </div>
+                    </div>
+                    </div>
                 </section>
             </div>
         </div>
