--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h2 id="Info" class="section-titles">Info</h2>
                     <p>Hi! Im a Full-Stack Developer, I like to code cool stuff and have fun in the process! My goal is to be a AI programmer one day but Im good at bringing creative ideas to a website.</p>
                     <p id="more-p">I like to code in several languages and I like math and also physics. I really like a bunch of things but I think my favorite thing to do is program because of the fact that I can bring any of my creative ideas to an app.</p>
-                    <a href="#" id="more-info">See More...</a>
+                    <a id="more-info">▽</a>
                 </section>
                 <section aria-labelledby="Projects" id="projects">
                     <h2 id="Projects" class="section-titles">Projects</h2>
@@ -60,7 +60,7 @@
                     </div>
                 </section>
             </div>
-            <div class="row-container">
+            <div class="row-container" id="second-main-container">
                 <section aria-labelledby="Twitter" id="twitter">
                     <h2 id="Twitter" class="section-titles">Twitter</h2>
                     <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
