--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </div>
                     <p>Hi! Im a Full-Stack Developer who likes to code cool things :D</p>
                 </section>
-                <section aria-labelledby="Languages" id="languages">
-                    <h2 id="Languages" class="section-titles">Languages</h2>
+                <section aria-labelledby="Skills" id="languages">
+                    <h2 id="Skills" class="section-titles">Skills</h2>
                     <p id="lang-p">Here are some of the languages I have experience with:</p>
                     <div class="row-section" id="lang-images">
                         <img src="resources/html5-logo-31813.png" alt="html" id="html-logo" class="p-languages">
