--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                         </div>
                     <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
-                    <p>Hi! Im a Full-Stack Developer who likes to code cool things :D</p>
+                    <p id="introduction-p">Hi! Im a Full-Stack Developer who likes to code cool things :D</p> 
+                    <div class="row-section" id="location-section">
+                    <img src="resources/pin.png" alt="Location" id="location-icon">
+                    <span id="location-span">Puerto Rico</span>
+                    </div>
                 </section>
                 <section aria-labelledby="Skills" id="languages">
                     <h2 id="Skills" class="section-titles">Skills</h2>
