--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                         <div class="col-section" id="name-career">
                     <h3 id="name">Harry Ruiz Figueroa</h3>
                     <a id="career">Student (FullStack)</a>
+                    <div class="row-section" id="location-section-2">
+                    <img src="resources/pin.png" alt="Location" id="location-icon-2">
+                    <span id="location-span-2">Puerto Rico</span>
+                    </div>
                         </div>
                     <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
