--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                     <img src="resources/2915aefba872f225d2561eceb92e6c4c.jpg" alt="Profile Picture" id="profile-picture">
                         <div class="col-section" id="name-career">
                     <h3 id="name">Harry Ruiz Figueroa</h3>
-                    <a id="career">Student (FullStack)</a>
+                    <a id="career">Software Engineering Student</a>
                     <div class="row-section" id="location-section-2">
                     <img src="resources/pin.png" alt="Location" id="location-icon-2">
                     <span id="location-span-2">Puerto Rico</span>
                     </div>
                         </div>
-                    <a href="mailto: harryyadier@gmail.com" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
+                    <a href="mailto: harry.ruiz6@upr.edu" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
-                    <p id="introduction-p">Hi! Im a Full-Stack Developer who likes to code cool things :D</p> 
+                    <p id="introduction-p">Hi! I'm a software engineering student who likes to code cool things :D</p>
                     <div class="row-section" id="location-section">
                     <img src="resources/pin.png" alt="Location" id="location-icon">
                     <span id="location-span">Puerto Rico</span>
@@ -53,7 +53,7 @@
                 </section>
                 <section aria-labelledby="Info" id="info">
                     <h2 id="Info" class="section-titles">Info</h2>
-                    <p>Hi! Im a Full-Stack Developer, I like to code cool stuff and have fun in the process! My goal is to be a AI programmer one day but Im good at bringing creative ideas to a website.</p>
+                    <p>Hi! Im a Software Engineering student, I like to code cool stuff and have fun in the process! My goal is to be a AI researcher one day but Im good at bringing creative ideas to a software.</p>
                     <p id="more-p">I like to code in several languages and I like math and also physics. I really like a bunch of things but I think my favorite thing to do is program because of the fact that I can bring any of my creative ideas to an app.</p>
                     <a id="more-info">▽</a>
                 </section>
@@ -61,21 +61,15 @@
                     <h2 id="Projects" class="section-titles">Projects</h2>
                     <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. </p>
                     <div class="row-section">
-                    <a href="https://github.com/Harryto4K/Notes-" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/Click-Counter" target="_blank" rel="noopener" class="proj-a" id="proj-a-cc"><img src="resources/pngwing.com.png" alt="ClickCounter" id="cc-proj" class="proj-images"></a>
-                    <a href="https://github.com/Harryto4K/lodash" target="_blank" rel="noopener" class="proj-a" id="proj-a-lodash"><img src="resources/Lodash.svg.png" alt="Lodash" id="lodash-proj" class="proj-images"></a>
+                        <a href="https://github.com/harryto1/Notes" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
+                        <a href="https://github.com/harryto1/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
                     </div>
                 </section>
             </div>
             <div class="row-container" id="second-main-container">
-                <section aria-labelledby="Twitter" id="twitter">
-                    <h2 id="Twitter" class="section-titles">Twitter</h2>
-                    <a href="https://twitter.com/harrytouwu" target="_blank" rel="noopener" class="sn-a"><img src="resources/580b57fcd9996e24bc43c53e.png" alt="Twitter Logo" id="twitter-logo"></a>
-                </section>
                 <section aria-labelledby="Github" id="github">
                     <h2 id="Github" class="section-titles">Github</h2>
-                    <a href="https://github.com/Harryto4K" target="_blank" rel="noopener" class="sn-a"><img src="resources/github.png" alt="Github Logo" id="github-logo"></a>
+                    <a href="https://github.com/harryto1" target="_blank" rel="noopener" class="sn-a"><img src="resources/github.png" alt="Github Logo" id="github-logo"></a>
                 </section>
                 <section aria-label="Notes App" id="notes-app-container">
                     <div class="row-section" id="notes-section-container">
