changed info, added education, fixed responsiveness, changed pfp

--- a/index.html
+++ b/index.html
@@ -23,21 +23,29 @@
                 <section aria-labelledby="Introduction" id="intro">
                     <h2 id="Introduction" class="section-titles">Introduction</h2>
                     <div class="row-section" id="profile">
-                    <img src="resources/2915aefba872f225d2561eceb92e6c4c.jpg" alt="Profile Picture" id="profile-picture">
+                    <img src="resources/resume_pfp.jpg" alt="Profile Picture" id="profile-picture">
                         <div class="col-section" id="name-career">
                     <h3 id="name">Harry Ruiz Figueroa</h3>
                     <a id="career">Software Engineering Student</a>
                     <div class="row-section" id="location-section-2">
                     <img src="resources/pin.png" alt="Location" id="location-icon-2">
                     <span id="location-span-2">Puerto Rico</span>
+                        <img src="resources/icon-education.png" alt="Education" id="education-icon-2">
+                        <span id="education-span-2">UPRM</span>
                     </div>
                         </div>
                     <a href="mailto: harry.ruiz6@upr.edu" id="send-email"><img src="resources/gmail-logo-transparent.png" alt="Send Email" id="email-logo"/></a>
                     </div>
                     <p id="introduction-p">Hi! I'm a software engineering student who likes to code cool things :D</p>
+                    <div class="row-container" id="location-education-container">
                     <div class="row-section" id="location-section">
                     <img src="resources/pin.png" alt="Location" id="location-icon">
                     <span id="location-span">Puerto Rico</span>
+                    </div>
+                    <div class="row-section" id="education-section">
+                    <img src="/resources/icon-education.png" alt="Education" id="education-icon">
+                    <span id="education-span">UPRM</span>
+                    </div>
                     </div>
                 </section>
                 <section aria-labelledby="Skills" id="languages">
@@ -53,8 +61,8 @@
                 </section>
                 <section aria-labelledby="Info" id="info">
                     <h2 id="Info" class="section-titles">Info</h2>
-                    <p>Hi! Im a Software Engineering student, I like to code cool stuff and have fun in the process! My goal is to be a AI researcher one day but Im good at bringing creative ideas to a software.</p>
-                    <p id="more-p">I like to code in several languages and I like math and also physics. I really like a bunch of things but I think my favorite thing to do is program because of the fact that I can bring any of my creative ideas to an app.</p>
+                    <p>I'm a 1st year student at University of Puerto Rico - Mayagüez. I have a passion for coding, problem-solving, math, and science. I'm eager to learn the most I can, and work to gain expertise about software engineering since my goal is to become an AI researcher/engineer.</p>
+                    <p id="more-p">I'm currently pursuing coursework in <i>Intro to programming languages</i> and I have completed a course of <i>Fundamentals of programming</i> in C++ on High School. Working on personal coding projects as well as class projects. Looking forward to securing an internship to apply my skills in a real-world scenario.</p>
                     <a id="more-info">▽</a>
                 </section>
                 <section aria-labelledby="Projects" id="projects">
