--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </section>
                 <section aria-labelledby="Info" id="info">
                     <h2 id="Info" class="section-titles">Info</h2>
-                    <p>I'm a 1st year student at University of Puerto Rico - Mayagüez. I have a passion for coding, problem-solving, math, and science. I'm eager to learn the most I can, and work to gain expertise about software engineering since my goal is to become an AI researcher/engineer.</p>
+                    <p>I'm a <strong>1st</strong> year student at University of Puerto Rico - Mayagüez. I have a passion for coding, problem-solving, math, and science. I'm eager to learn the most I can, and work to gain expertise about software engineering since my goal is to become an AI researcher/engineer.</p>
                     <p id="more-p">I'm currently pursuing coursework in <i>Intro to programming languages</i> and I have completed a course of <i>Fundamentals of programming</i> in C++ on High School. Working on personal coding projects as well as class projects. Looking forward to securing an internship to apply my skills in a real-world scenario.</p>
                     <a id="more-info">▽</a>
                 </section>
