added the Hangman Project!

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <button type="button" id="close-button-notes">X</button>
         <object type="text/html" data="https://harryto4k.github.io/Notes-/" width="85%" height="85%" id="notes-app">
         </object>
+        <object type="text/html" data="https://harryto1.pythonanywhere.com/" width="85%" height="85%" id="hangman-app">
+        </object>
         <div class="main-container">
             <h1 id="title">Portfolio</h1>
             <div class="col-container">
@@ -57,6 +59,7 @@
                         <img src="resources/javascript-39404.png" alt="javasript" id="js-logo" class="p-languages">
                         <img src="resources/Bash_Logo_Colored.svg.png" alt="bash" id="bash-logo" class="p-languages">
                         <img src="resources/ISO_C++_Logo.svg.png" alt="c++" id="c++-logo" class="p-languages">
+                        <img src="resources/Flask.png" alt="flask" id="flask-logo" class="p-languages">
                     </div>
                 </section>
                 <section aria-labelledby="Info" id="info">
@@ -70,6 +73,7 @@
                     <p id="proj-p">Here are some projects that I've made or participated in, feel free to touch any of those buttons to have more info about any projects you wish. </p>
                     <div class="row-section">
                         <a href="https://github.com/harryto1/Notes" target="_blank" rel="noopener" class="proj-a" id="proj-a-notes"><img src="resources/sticky-notes.png" alt="Notes" id="notes-proj" class="proj-images"></a>
+                        <a href="" class="proj-a" id="proj-a-hangman"><img src="resources/Hangman-5.svg.png" alt="Hangman" id="hangman-proj" class="proj-images"></a>
                         <a href="https://github.com/harryto1/creditCardChecker" target="_blank" rel="noopener" class="proj-a" id="proj-a-ccv"><img src="resources/pngimg.com - credit_card_PNG78.png" alt="CreditCardValidator" id="ccv-proj" class="proj-images"></a>
                     </div>
                 </section>
@@ -79,16 +83,30 @@
                     <h2 id="Github" class="section-titles">Github</h2>
                     <a href="https://github.com/harryto1" target="_blank" rel="noopener" class="sn-a"><img src="resources/github.png" alt="Github Logo" id="github-logo"></a>
                 </section>
-                <section aria-label="Notes App" id="notes-app-container">
+                <section aria-label="Notes App" id="notes-app-container" class="projects-section">
                     <div class="row-section" id="notes-section-container">
-                    <img src="resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img">
+                    <img src="resources/sticky-notes.png" alt="Notes Logo" id="notes-app-img" class="projects-img">
                     <div class="col-section" id="notes-col-container">
                     <h2 id="Notes" class="section-titles">Notes</h2>
-                    <p id="notes-p">The Notes App is a website used to make notes about important stuff or things you have pending.</p>
+                    <p id="notes-p" class="projects-p">The Notes App is a website used to make notes about important stuff or things you have pending.</p>
                     <div class="row-section" id="notes-logos-container">
-                    <img src="resources/html-black.png" class="notes-logos" id="html-black-logo" alt="HTML"> 
-                    <img src="resources/css-black.png" class="notes-logos" id="css-black-logo" alt="CSS">
-                    <img src="resources/javascript-39404.png" class="notes-logos" id="js-black-logo" alt="JAVASCRIPT">
+                    <img src="resources/html-black.png" class="projects-logos" id="html-black-logo" alt="HTML">
+                    <img src="resources/css-black.png" class="projects-logos" id="css-black-logo" alt="CSS">
+                    <img src="resources/javascript-39404.png" class="projects-logos" id="js-black-logo" alt="JAVASCRIPT">
+                    </div>
+                    </div>
+                    </div>
+                </section>
+                <section aria-label="Hangman App" id="hangman-app-container" class="projects-section">
+                    <div class="row-section" id="hangman-section-container">
+                    <img src="resources/Hangman-5.svg.png" alt="Hangman Logo" id="hangman-app-img" class="projects-img">
+                    <div class="col-section" id="hangman-col-container">
+                    <h2 id="Hangman" class="section-titles">Hangman</h2>
+                    <p id="hangman-p" class="projects-p">The Hangman App is a website used to play the classic game of Hangman.</p>
+                    <div class="row-section" id="hangman-logos-container">
+                    <img src="resources/html-black.png" class="projects-logos" alt="HTML">
+                    <img src="resources/css-black.png" class="projects-logos" alt="CSS">
+                    <img src="resources/Flask.png" class="projects-logos" alt="Flask">
                     </div>
                     </div>
                     </div>
