fixed small issue with responsiveness

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </object>
         <div class="main-container">
             <h1 id="title">Portfolio</h1>
-            <div class="col-container">
+            <div class="col-container" id="general">
                 <section aria-labelledby="Introduction" id="intro">
                     <h2 id="Introduction" class="section-titles">Introduction</h2>
                     <div class="row-section" id="profile">
