added a few logos I forgot

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 </section>
                 <section aria-labelledby="Skills" id="languages">
                     <h2 id="Skills" class="section-titles">Skills</h2>
-                    <p id="lang-p">Here are some of the languages I have experience with:</p>
+                    <p id="lang-p">Here are some of the languages and frameworks I have experience with:</p>
                     <div class="row-section" id="lang-images">
+                        <img src="resources/python-logo-only.png" alt="python" id="python-logo" class="p-languages">
                         <img src="resources/html5-logo-31813.png" alt="html" id="html-logo" class="p-languages">
                         <img src="resources/html5-logo-31821.png" alt="css" id="css-logo" class="p-languages">
                         <img src="resources/javascript-39404.png" alt="javasript" id="js-logo" class="p-languages">
@@ -106,6 +107,7 @@
                     <div class="row-section" id="hangman-logos-container">
                     <img src="resources/html-black.png" class="projects-logos" alt="HTML">
                     <img src="resources/css-black.png" class="projects-logos" alt="CSS">
+                    <img src="resources/javascript-39404.png" class="projects-logos" alt="JavaScript">
                     <img src="resources/Flask.png" class="projects-logos" alt="Flask">
                     </div>
                     </div>
